--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,17 @@ skyseg.onnx
 # pixi environments
 .pixi
 *.egg-info
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+.Spotlight-V100
+.Trashes
+._*
+
+# Editor/IDE
+.idea/
+.vscode/
+.history/
+.ropeproject/
