--- a/training/config/single_tv.yaml
+++ b/training/config/single_tv.yaml
@@ -96,6 +96,7 @@ checkpoint:
   # Avoid failing on nonexistent placeholder path; set to null by default.
   resume_checkpoint_path: null
   strict: False
+  enabled: true
 
 
 loss:
