feat: add LoRA fine-tuning support for ETH3D dataset
Implement parameter-efficient fine-tuning with multiple training strategies and comprehensive evaluation framework.

**Core Features:**
- LoRA utilities for model adaptation with configurable rank
- ETH3D dataset loader supporting multi-view stereo sequences
- Three fine-tuning strategies (A: depth head, B: depth+camera heads, C: all heads)
- Evaluation scripts with depth alignment methods (scale-shift, zero-shift)
- Checkpoint evaluation curves for hyperparameter analysis
- Training scripts and configuration templates

**Training Configurations:**
- Strategy A: freeze aggregator, train depth head only
- Strategy B: freeze aggregator, train depth+camera heads
- Strategy C: train all components
- Configurable LoRA rank (default r=16), alpha, dropout

**Evaluation & Benchmarks:**
- ETH3D evaluation with multiple depth alignment methods
- Checkpoint curve evaluation across training epochs
- VRAM optimization benchmarks and sweep analysis
- Visualization pipeline for depth predictions

**Documentation:**
- Quick start guide for LoRA training
- Comprehensive training guide with strategy recommendations
- Implementation summary and file listing
- Updated project documentation (CLAUDE.md, AGENTS.md)

**Infrastructure:**
- Add peft, safetensors to dependencies
- Update .gitignore for logs/ and pretrained/
- Clean up deprecated baseline reports
- Add test documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch==2.3.1
-torchvision==0.18.1
+torch==2.8.0
+torchvision
 numpy==1.26.1
 Pillow
 huggingface_hub
 einops
 safetensors
+peft>=0.7.0  # For LoRA training
